--- a/views/pages/showGameGenres.ejs
+++ b/views/pages/showGameGenres.ejs
@@ -8,11 +8,10 @@
                     <button type="submit" style = "align-self: flex-end;">Delete</button>
                     </form>
                 </p>
-                <hr style="text-align:center;margin:0px"
+                <hr style="text-align:center;margin:0px">
             <% }) %>
         </div>
 <% } %>
-    </div>
 <script>
     function toggleVisibility() {
         let x = document.getElementById('dropdown_genres_content');
@@ -26,3 +25,5 @@
     } 
     //cambiar estilo css dinamicamente a traves de js sacado de: https://www.w3schools.com/js/js_htmldom_css.asp
 </script> 
+
+</div>
