--- a/views/pages/showGameGenres.ejs
+++ b/views/pages/showGameGenres.ejs
@@ -8,7 +8,7 @@
                     <button type="submit" style = "align-self: flex-end;">Delete</button>
                     </form>
                 </p>
-                <hr style="text-align:center;margin:0px"
+                <hr style="text-align:center;margin:0px">
             <% }) %>
         </div>
 <% } %>
