--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -4,6 +4,7 @@
     <div class="juego_info_superior">
         <div class="juego_info">
             <% showGameInfo() %>
+            <%- include('showGameGenres') %>
         </div>
         <div class="juego_info2">
             <% showGameInfo2() %>
@@ -33,13 +34,9 @@
     <a href="/games/<%= game.id %>"><img src="<%= game.image %>" alt="Imagen de <%= game.title %>"></a>
     <p>Valoracion media: <%= game.rating %></p>
     <p>Numero Favoritos: <%= game.favNumber %></p>
-    
+<% } %>
 
-    <%- include('showGameGenres') %>
-
-<% } %> <% function showGameInfo2(){ %>
-    
-
+<% function showGameInfo2(){ %>
     <p><u>Descripción del juego</u>:  <%= game.description %></p>
     <p><u>Desarrollado por</u>: Empresa 1</p>
 
