--- a/views/pages/reviews/userReviews.ejs
+++ b/views/pages/reviews/userReviews.ejs
@@ -18,10 +18,24 @@
     <p></p>
     <p></p>
     <% if(session.esAdmin) {%>
-        <% console.log("REVIEW ID: " + rev.reviewId)%>
         <form action = "/games/deleteReview/<%= rev.reviewId%>" method = "POST">
             <input type = "hidden" name = "gameId" value = "<%= game.id %>">
+<!--            <input type = "hidden" name = "userId" value = "<%= session.UserName%>">-->
             <button type ="submit">Eliminar review</button>
         </form>
     <% }%>
 <% } %>
+
+<% function addReview(session) {%>
+<%if(session.login) {%>
+    <form action = "/games/addReview" method = "GET">
+
+        <% console.log("ADD REVIEW FUNCTION"); %>
+        <% console.log("GAMEID:" + game.id); %>
+        <% console.log("USERID:" + session.UserName); %>
+        <input type = "hidden" name = "gameId" value = "<%= game.id %>">
+        <input type = "hidden" name = "userName" value = "<%= session.UserName%>">
+        <button type ="submit">Escribir review</button>
+    </form>
+<%}%>
+<%}%>
