--- a/views/pages/showGameGenres.ejs
+++ b/views/pages/showGameGenres.ejs
@@ -4,17 +4,21 @@
             <% genreList.forEach(genre => { %>
                 <div class="genre_block">
                 <p><%= genre.name %>
+                    <% if(session.esAdmin) { %>
                     <form id="filters" action="/genres/deleteGenre/<%= genre.id %>/<%=game.id%>" method="POST">
                     <button type="submit">Borrar</button>
                     </form>
+                    <% } %>
                 </p>
             </div>
             <p> </p>
             <% }) %>
         </div>
+    <% if(session.esAdmin) { %>
     <form id="filters" action="/genres/addGenre/<%=game.id%>" method="POST">
         <input type = "text" name="genre_name"><button type="submit"">Añadir</button>
     </form>
+    <% } %>
 <% } %>
 <script>
     function toggleVisibility() {
