Borrado por deshabilitacion

--- a/views/pages/showUsersDel.ejs
+++ b/views/pages/showUsersDel.ejs
@@ -1,6 +1,6 @@
 <h1>Seeccione el usuario que quiere eliminar </h1>
 
-<!--<form action="/users/listausuarios" method="POST">
+<form action="/users/listausuarios" method="POST">
     <h4>
         <label for="UserName">Search</label>
         <input type="text" name="UserName">
@@ -20,7 +20,7 @@
 
 
     </h4>
--->
+
     <div id="user_list">
         <% showUserList() %>
     </div>
