--- a/views/pages/reviews/userReviews.ejs
+++ b/views/pages/reviews/userReviews.ejs
@@ -5,7 +5,7 @@
 
 <% function showReviews(id){ %>
     <% reviewList.forEach(review => { %>
-        <div id = "review_juego">
+        <div class = "review_juego">
             <% showRev(review) %>
         </div>
 <% })} %>
