--- a/views/pages/listajuegos.ejs
+++ b/views/pages/listajuegos.ejs
@@ -37,7 +37,7 @@
     <div class="game_list_grid">
         <% gameList.forEach(game=>{ %>
             <div class="game-card">
-                <h3><a href="/games/<%= game.id %>"><%= game.title %></a></h3>
+                <h3 class = "game_title"><a href="/games/<%= game.id %>"><%= game.title %></a></h3>
                 <a href="/games/<%= game.id %>"><img src="<%= game.image %>" alt="Imagen de <%= game.title %>"></a>
                 <div class="game-info">
                     <p>Valoración: <%= game.rating %></p>
